# agent-hosting-infra-test

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile.api  Dockerfile.operator  Makefile  README.md  SYSBOX_INTEGRATION.md  TEST_EXECUTION_GUIDE.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.config/: nextest.toml
api/: Cargo.toml
api/src/: auth.rs  crd.rs  error.rs  handlers.rs  lib.rs  main.rs  sse.rs
cli/: Cargo.toml
cli/src/: main.rs
configs/: backup-policy.yaml
deploy/k3s/: install.sh  join.sh
deploy/manifests/: agent-crd.yaml  api-server.yaml  ingress.yaml  minio.yaml  namespace.yaml  operator.yaml  ssh-proxy.yaml  sysbox-runtimeclass.yaml
deploy/manifests/monitoring/: kube-prometheus-values.yaml  loki-values.yaml
deploy/scripts/: docker-compat.sh
deploy/terraform/: main.tf
docs/: ARCHITECTURE.md  test-cases.md
kubernetes/rbac/: agent-api-rbac.yaml  agent-operator-rbac.yaml
operator/: Cargo.toml
operator/src/: controller.rs  crd.rs  error.rs  main.rs  resources.rs
scripts/: deploy.sh  setup-sysbox.sh  testops-upload.sh
tests/: .env.example  Cargo.toml  conftest.py  test_agent_deployment.py
tests/src/: api_general.rs  creation.rs  deletion.rs  helpers.rs  host_health.rs  isolation.rs  lib.rs  lifecycle.rs  logs.rs  ssh.rs
