[workspace]
resolver = "2"
members = ["api", "operator", "cli"]

[workspace.dependencies]
kube = { version = "0.98", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
