[package]
name = "agent-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
thiserror = { workspace = true }
