[package]
name = "agent-operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-operator"
path = "src/main.rs"

[dependencies]
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = "1"
