[package]
name = "agent-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "agent_tests"
path = "src/lib.rs"

[dependencies]
agent-api = { path = "../api" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
